--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passport",
+  "name": "passport_demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/dhqthai/PassportJS/issues"
   },
-  "homepage": "https://github.com/dhqthai/PassportJS#readme"
+  "homepage": "https://github.com/dhqthai/PassportJS#readme",
+  "devDependencies": {
+    "nodemon": "^1.12.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "tern-node-express": "^0.4.0"
+  }
 }
